@@ -1020,4 +1020,31 @@ function PMA_DBI_get_default_engine()
     }
 }
 
+/**
+ * Get supported SQL compatibility modes
+ *
+ * @return  array   supported SQL compatibility modes
+ */
+function PMA_DBI_get_compatibilities()
+{
+    if (PMA_MYSQL_INT_VERSION < 40100) {
+        return null;
+    }
+    $compats = array('NONE');
+    if (PMA_MYSQL_INT_VERSION >= 40101) {
+        $compats[] = 'ANSI';
+        $compats[] = 'DB2';
+        $compats[] = 'MAXDB';
+        $compats[] = 'MYSQL323';
+        $compats[] = 'MYSQL40';
+        $compats[] = 'MSSQL';
+        $compats[] = 'ORACLE';
+        $compats[] = 'POSTGRESQL';
+        if (PMA_MYSQL_INT_VERSION >= 50001) {
+            $compats[] = 'TRADITIONAL';
+        }
+    }
+    return $compats;
+}
+
 ?>
